--- a/client/style/top20.scss
+++ b/client/style/top20.scss
@@ -5,7 +5,7 @@
 
 .top20-main {
   height: calc(100% - 48px);
-  margin: 12px;
+  margin: 0 12px;
 }
 
 .top20-category-selector {
@@ -17,7 +17,8 @@
 }
 
 .top20-header {
-  padding-top: 30px;
+  padding-top: 55px;
+  padding-left: 15px;
 }
 
 .subtle-gray-gradient {
